@@ -13,7 +13,14 @@
 # 	autoconf (optional - used by munin-config)
 # 	suggest  (optional - used by munin-config)
 #
+# Configuration variables
+#
+#   regex - regex to use for filtering pgrep/ps output
+#
 # $Log$
+# Revision 1.2  2004/01/29 18:43:20  jimmyo
+# Changed wildcard plugin ps_ so it can use env.regex in plugin-conf.d/ (SF#882131)
+#
 # Revision 1.1  2004/01/02 18:50:00  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -30,8 +37,10 @@
 #%# capabilities=autoconf suggest
 
 
+myname=`basename $0 | sed 's/^ps_//g'`
 
-name=`basename $0 | sed 's/^ps_//g'`
+name="${name-\<$myname\>}"
+REGEX="${regex-\<$name\>}"
 
 if [ "$1" = "autoconf" ]; then
 	echo yes
@@ -44,15 +53,21 @@ fi
 
 if [ "$1" = "config" ]; then
 
-	echo graph_title Number of $name processes
+	echo graph_title Number of $myname processes
 	echo 'graph_args --base 1000 --vertical-label processes -l 0'
-	echo "count.label $name"
+	echo "count.label $myname"
 	echo 'processes.draw LINE2'
 	exit 0
 fi
 
 echo -n "count.value "
-pgrep -f -l "$name" | grep "\<$name\( \|$\)" | grep -v grep | wc -l
 
-# For systems without pgrep
-#ps auxwww | grep "\<$name\( \|$\)" | grep -v grep | wc -l
+PGREP=`which pgrep`
+if [ -n "$PGREP" ]; then
+	$PGREP -f -l "$name" | grep "$REGEX" | wc -l
+elif [ -x /usr/ucb/ps ]; then
+	# Solaris without pgrep. How old is that?
+	/usr/ucb/ps auxwww | grep "$REGEX" | grep -v grep | wc -l
+else
+	ps auxwww | grep "$REGEX" | grep -v grep | wc -l
+fi
